<resources>
    <string name="app_name">Audioguias</string>
    <string name="prefs_file" translatable="false">com.example.audioguiasandroid.PREFERENCE_FILE_KEY</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="configuration_title">Configuration</string>
    <string name="user_preferences_title">User preferences</string>
    <string name="language_title">Language</string>
    <string name="unit_of_measurement_title">Unit of measurement</string>
    <string name="red_mode_title">Red mode</string>
    <string name="notifications_title">Notifications</string>
    <string name="downloads_title">Downloads</string>
    <string name="storage_title">Storage</string>
    <string name="several_title">Several</string>
    <string name="about_us_title">About us</string>
    <string name="licenses_title">Licenses</string>
    <string name="account_title">Account</string>
    <string name="delete_account_title">Delete account</string>
    <string name="anonymous">Anonymous</string>
    <string name="english">English</string>
    <string name="all_redMode">All</string>
    <string name="wifi_redMode">Only wifi</string>
    <string name="offline_redMode">Offline</string>
    <string name="external_storage">External</string>
    <string name="internal_storage">Internal</string>
    <string name="help_title">Help and feedback</string>
    <string name="back">Back</string>
    <string name="contact_us_title">Contact us</string>
    <string name="visit_web_page"><u>Visit our web page</u></string>
    <string name="contact_us_text">Enter your question or feedback:</string>
    <string name="send">Send</string>
    <string name="location_10km_mode">10 Km</string>
    <string name="location_50km_mode">50 Km</string>
    <string name="off_mode">Off</string>
    <string name="spanish">Spanish</string>
    <string name="description_title">Description</string>
    <string name="comments_title">Comments</string>
    <string name="adds_comments">Add a comment...</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_account">Create an account</string>
    <string name="actual_password">Actual password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="surname_optional">Surname (Optional)</string>
    <string name="signUp">Sign up</string>
    <string name="email" translatable="false">Email</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="verify_text">In order to make changes to the profile, you must verify your email. Click on the &quot;VERIFY ACCOUNT&quot; button to send a verification email. Once you verify the account, press the &quot;LOG OUT&quot; button. and sign in again to complete the verification.</string>
    <string name="verify_account">Verify account</string>
    <string name="search_edit_text">Search...</string>
    <string name="cost_text_view">Cost:</string>
    <string name="valoration_text_view">Valoration:</string>
    <string name="favs_title">Favorites</string>
    <string name="modify_profile">Modify profile</string>
    <string name="location_disabled">Functionality disabled due to location permissions not being granted.</string>
    <string name="alert">Alert</string>
    <string name="information">Information</string>
    <string name="lost_credentials">Your account credentials have been lost. Please login again.</string>
    <string name="modify_comment">Modify your comment...</string>
    <string name="empty_comment">The comment is empty or no rating has been indicated.</string>
    <string name="required_fields">Missing required fields to complete.</string>
    <string name="dont_match_passwords">Passwords do not match.</string>
    <string name="error_delete_account">Failed to remove your authentication account.</string>
    <string name="success_delete_account">Your account has been successfully deleted.</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="empty_box_comment">The comment box is empty.</string>
    <string name="send_comment_successfully">The comment has been sent successfully.</string>
    <string name="log_out_info">You have been logged out.</string>
    <string name="sign_up_title">Register</string>
    <string name="select_image">Select image</string>
    <string name="account_verification_title">Account verification</string>
    <string name="profile_title">Profile</string>
    <string name="change_password_successfully">Password changed successfully.</string>
    <string name="change_password_error">Failed to change password.</string>
    <string name="incorrect_actual_password">Incorrect current password. Failed to re-authenticate.</string>
    <string name="verification_email_sent">A verification email has been sent to</string>
    <string name="changes_saved">Changes have been saved.</string>
    <string name="error_user_info">Error getting user information.</string>
    <string name="invalid_fields_name_surname">Mandatory fields not completed or there are invalid characters. You can only use characters from A-z for the first and surnames.</string>
    <string name="password_requirements">The password does not meet the requirements. It must contain at least one uppercase letter, one lowercase letter, one digit, one symbol, and a minimum of 8 characters.</string>
    <string name="error_create_account">An error occurred while creating the user.</string>
    <string name="error_text">An error has occurred.</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="location_6mi_mode" translatable="false">6 Mi</string>
    <string name="location_30mi_mode" translatable="false">30 Mi</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password_link">Reset password</string>
    <string name="provide_email">Provide your email: </string>
    <string name="email_sent">Your request has been successfully completed. The email may take a few minutes to arrive in your inbox. Check spam.</string>
    <string name="invalid_email">The email is not valid.</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="about_us_text_1">This is a company dedicated to the development of web applications.</string>
    <string name="about_us_text_2">Audioguias is a web application that allows users to create and share audio guides for tourist locations.</string>
    <string name="about_us_text_3">This application has been developed by:</string>
    <string name="login">Login</string>
    <string name="access">Log in</string>
    <string name="change_location_range">Change location range</string>
    <string name="home">Home</string>
    <string name="main_image">Main image</string>
    <string name="remove">Remove</string>


</resources>