<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResetPasswordActivity">
    <ImageView
        android:id="@+id/backButton_ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back"/>
    <TextView
        android:id="@+id/forgotPasswordTextView_ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton_ResetPassword"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/sendEmailTextView_ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView_ResetPassword"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/emailEditText_ResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendEmailTextView_ResetPassword"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/sendButton_ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText_ResetPassword"
        android:backgroundTint="@color/red"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>