<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.UserProfileActivity">
    <ImageView
        android:id="@+id/backButton_UserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left_white"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton_UserProfile"
        android:background="@drawable/rounded_corners"
        android:padding="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImageView_UserProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@drawable/avatar" />
            <ImageView
                android:id="@+id/removeImageView_UserProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_remove_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/userImageView_UserProfile"
                app:layout_constraintEnd_toEndOf="@+id/userImageView_UserProfile"
                android:contentDescription="@string/remove"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/emailTextView_UserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/email"
            android:textSize="24sp"
            android:layout_marginVertical="4dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textSize="20sp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/nameEditText_UserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textSize="20sp"
            android:text="@string/surname_optional"/>

        <EditText
            android:id="@+id/surnameEditText_UserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>

        <Button
            android:id="@+id/saveButton_UserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/changePasswordButton_UserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <Button
            android:id="@+id/logOutButton_UserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_out"
            android:layout_marginVertical="24dp"
            android:backgroundTint="@color/red"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>