<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutUsActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/backButton_AboutUs"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/back"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton_AboutUs"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/titleAboutUs_AboutUs"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAboutUs_AboutUs"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:id="@+id/textView1_AboutUs"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1_AboutUs"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:id="@+id/textView2_AboutUs"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_AboutUs"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:id="@+id/textView3_AboutUs"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Francisco Cuadrado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_AboutUs"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:id="@+id/textView4_AboutUs"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4_AboutUs"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/red"
        android:id="@+id/contactUsButton_AboutUs"/>
</androidx.constraintlayout.widget.ConstraintLayout>