<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerifyActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton_Verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/verifyAccountTextView_Verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_text"
            android:layout_marginVertical="4dp"
            android:textColor="@color/black"
            android:padding="4dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/verifyAccount_Verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_account"
            android:layout_marginVertical="24dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/logOutButton_Verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>