<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.SignUpActivity">

    <ImageView
        android:id="@+id/backButton_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:contentDescription="@string/back"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton_SignUp"
        android:background="@drawable/rounded_corners"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signUp"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginVertical="16dp"/>


        <EditText
            android:id="@+id/nameEditText_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/surnameEditText_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname_optional"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>


        <EditText
            android:id="@+id/emailEditText_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/passwordEditText_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginVertical="4dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/password2EditText_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:background="@drawable/edittext_border"
            android:padding="10dp"/>

        <Button
            android:id="@+id/signUpButtton_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>